# python-travel-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/alembic/versions/: c8ab81aefeeb_initial.py
app/database/models/: __init__.py  booking.py  booking_seat.py  payment.py  seat.py  travel.py  user.py
