[tool.poetry]
name = "python-travel-api"
version = "0.1.0"
description = ""
authors = ["rbides <renanbides@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
sqlalchemy = "^2.0.35"
pydantic-settings = "^2.5.2"
python-dotenv = "^1.0.1"
alembic = "^1.13.3"
psycopg2-binary = "^2.9.9"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
